--- a/ui.apps/src/main/content/jcr_root/apps/wknd/components/helloworld/helloworld.html
+++ b/ui.apps/src/main/content/jcr_root/apps/wknd/components/helloworld/helloworld.html
@@ -15,7 +15,7 @@
 */-->
 <div class="cmp-helloworld" data-cmp-is="helloworld"
      data-sly-use.model="com.adobe.aem.guides.wknd.core.models.HelloWorldModel">
-    <h1 class="cmp-helloworld__title">My New Title1</h1>
+    <h1 class="cmp-helloworld__title">Plihina New Title</h1>
     <h1 class="cmp-helloworld__title">${model.title}</h1>
     <div class="cmp-helloworld__item" data-sly-test="${properties.text}">
         <p class="cmp-helloworld__item-label">Text property:</p>
