--- a/ui.frontend/src/main/webpack/components/_helloworld.scss
+++ b/ui.frontend/src/main/webpack/components/_helloworld.scss
@@ -3,10 +3,11 @@
 // but on dedicated CSS selectors to identify all elements
 .cmp-helloworld {}
 .cmp-helloworld__title {
-    color: red ;
+    color: red;
 }
 .cmp-helloworld__item {}
 .cmp-helloworld__item-label {
+    color: purple;
     margin-bottom: 0;
 }
 .cmp-helloworld__item-output {
