--- a/ui.frontend/src/main/webpack/components/_byline.scss
+++ b/ui.frontend/src/main/webpack/components/_byline.scss
@@ -14,8 +14,8 @@
   }
 
   .cmp-byline__name {
-    font-size: $font-size-medium;
-    font-family: $font-family-serif;
+    //font-size: $font-size-medium;
+    //font-family: $font-family-serif;
     padding-top: 0.5rem;
     margin-left: $imageSize + 25px;
     margin-bottom: .25rem;
@@ -24,8 +24,8 @@
 
   .cmp-byline__occupations {
     margin-left: $imageSize + 25px;
-    color: $gray;
-    font-size: $font-size-xsmall;
+    //color: $gray;
+    //font-size: $font-size-xsmall;
     text-transform: uppercase;
   }
 }
