--- a/ui.apps/src/main/content/jcr_root/apps/wknd/components/page/customheaderlibs.html
+++ b/ui.apps/src/main/content/jcr_root/apps/wknd/components/page/customheaderlibs.html
@@ -14,7 +14,7 @@
     limitations under the License.
 */-->
 <sly data-sly-use.clientLib="/libs/granite/sightly/templates/clientlib.html">
-    <sly data-sly-call="${clientlib.css @ categories='wknd.base'}">
+    <sly data-sly-call="${clientLib.css @ categories='wknd.base'}"></sly>
 </sly>
 
-<sly data-sly-resource="${'contexthub' @ resourceType='granite/contexthub/components/contexthub'}"/>
+<sly data-sly-resource="${'contexthub' @ resourceType='granite/contexthub/components/contexthub'}"></sly>
