done Slightly Demo List

--- a/ui.apps/src/main/content/jcr_root/apps/wknd/components/alltypes/alltypes.html
+++ b/ui.apps/src/main/content/jcr_root/apps/wknd/components/alltypes/alltypes.html
@@ -1,3 +1,6 @@
 <h1>
     ASD
 </h1>
+<sly data-sly-use.clientLib="/libs/granite/sightly/templates/clientlib.html">
+    <sly data-sly-call="${clientLib.all @ categories='wknd.alltypes'}"></sly>
+</sly>
