--- a/ui.apps/src/main/content/jcr_root/apps/wknd/components/content/htlsightly/htlsightly.html
+++ b/ui.apps/src/main/content/jcr_root/apps/wknd/components/content/htlsightly/htlsightly.html
@@ -1,36 +1,30 @@
-
+<h1>Slightly Demo</h1>
 <div data-sly-use.htl="com.adobe.aem.guides.wknd.core.models.HTLSightly"></div>
-<h1>_____Sightly Demo_______</h1>
-<!--==================Use List=====================-->
-<!--<div data-sly-list.item="${htl.books}">-->
-<!--    <p>Book : <b>${item}</b></p>-->
-<!--    <p>Subject: <b>${item.booksubject}</b></p>-->
-<!--</div>-->
-<!--==================Use List with MAP=====================-->
-<!--<div data-sly-list.item="${htl.books}">-->
-<!--    <p>Book : <b>${item.bookname}</b></p>-->
-<!--    <p>Subject: <b>${item.booksubject}</b></p>-->
-<!--</div>-->
-<!--==================Use MAP=====================-->
-<!--<div data-sly-list.item="${htl.books}">-->
-<!--    <p>key : <b>${item}</b></p>-->
-<!--    <p>value: <b>${htl.bookMap[item]}</b></p>-->
-<!--</div>-->
-<!--==================new=====================-->
-<!--<div id="html-attribute">-->
-<!--    <p>Using html</p>-->
-<div data-sly-include="include1.html"> TWO</div>
-<!--<div data-sly-resource="${'/content/wknd/us/en/jcr:content/root/container/container/byline'}"></div>-->
-<!--</div>-->
-<!--<div id="sightly-attribute" data-sly-attribute="htl.bookMap">-->
-<!--    <p>Using arrtibute</p>-->
-<!--</div>-->
-<div style="color: #e04d20; font-style: italic;font-family: Arial, serif"><p>
-    Dialog: <b>${properties.title}</b>
-</p></div>
-<div>
-    <p>${'<h1>Hhhhhhhhhhhhhhh</h1>' @ context= 'html'}</p>
-</div>
+<!--/* ===Array test=== */-->
+<!--/* <div data-sly-list.item="${htl.booksArray}"> */-->
+<!--/*     <p>Book : <b>${item}</b></p> */-->
+<!--/* </div> */-->
+<!--/* ===ArrayList test=== */-->
+<!--/* <div data-sly-list.item="${htl.books @ begin = 0, step = 2, end = 3}"> */-->
+<!--/*     <p>Index: <b>${itemList.count}</b> First: <b>${itemList.first}</b> Middle: <b>${itemList.middle}</b> */-->
+<!--/*         Last: <b>${itemList.last}</b> Odd: <b>${itemList.odd}</b></p> */-->
+<!--/*     <p>Book ##${itemList.count}: <b>${item}</b></p> */-->
+<!--/* </div> */-->
+<!--/* ===Repeat test=== */-->
+<!--/* <div class="repeat" data-sly-repeat.item="${htl.books}"> */-->
+<!--/*     <p>Book ##${itemList.count}: <b>${item}</b></p> */-->
+<!--/* </div> */-->
+<!--/* ===Map test=== */-->
+<!--/* <div data-sly-list.item="${htl.booksMap}"> */-->
+<!--/*     <p>key : <b>${item}</b></p> */-->
+<!--/*     <p>value : <b>${htl.booksMap[item]}</b></p> */-->
+<!--/* </div> */-->
+<!--/* ===List With Map Test=== */-->
+<!--/* <div data-sly-list.item="${htl.bookDetailsWithMap}"> */-->
+<!--/*     <p>Book : <b>${item.bookname}</b></p> */-->
+<!--/*     <p>Subject : <b>${item.booksubject}</b></p> */-->
+<!--/* </div> */-->
+
 
 
 
