done Slightly Demo Template

--- a/ui.apps/src/main/content/jcr_root/apps/wknd/components/content/htlsightly/htlsightly.html
+++ b/ui.apps/src/main/content/jcr_root/apps/wknd/components/content/htlsightly/htlsightly.html
@@ -24,7 +24,18 @@
 <!--/*     <p>Book : <b>${item.bookname}</b></p> */-->
 <!--/*     <p>Subject : <b>${item.booksubject}</b></p> */-->
 <!--/* </div> */-->
-
+===List With Map Template Test===
+<div data-sly-use.booksTemplate="authorbooks.html">
+    <sly data-sly-call="${booksTemplate.authorBooks @ books=htl}"/>
+</div>
+===Map Template Template Test===
+<div data-sly-use.booksTemplate="authorbooks.html">
+    <sly data-sly-call="${booksTemplate.booksMap @ books=htl}"/>
+</div>
+===ArrayList Template Test===
+<div data-sly-use.booksTemplate="authorbooks.html">
+    <sly data-sly-call="${booksTemplate.booksList @ books=htl}"/>
+</div>
 
 
 
