create Book Component

--- a/ui.apps/src/main/content/jcr_root/apps/wknd/components/content/htlsightly/htlsightly.html
+++ b/ui.apps/src/main/content/jcr_root/apps/wknd/components/content/htlsightly/htlsightly.html
@@ -24,18 +24,21 @@
 <!--/*     <p>Book : <b>${item.bookname}</b></p> */-->
 <!--/*     <p>Subject : <b>${item.booksubject}</b></p> */-->
 <!--/* </div> */-->
-===List With Map Template Test===
-<div data-sly-use.booksTemplate="authorbooks.html">
-    <sly data-sly-call="${booksTemplate.authorBooks @ books=htl}"/>
-</div>
-===Map Template Template Test===
-<div data-sly-use.booksTemplate="authorbooks.html">
-    <sly data-sly-call="${booksTemplate.booksMap @ books=htl}"/>
-</div>
-===ArrayList Template Test===
-<div data-sly-use.booksTemplate="authorbooks.html">
-    <sly data-sly-call="${booksTemplate.booksList @ books=htl}"/>
-</div>
-
+<!--/* ===List With Map Template Test=== */-->
+<!--/* <div data-sly-use.booksTemplate="authorbooks.html"> */-->
+<!--/*     <sly data-sly-call="${booksTemplate.authorBooks @ books=htl}"/> */-->
+<!--/* </div> */-->
+<!--/* ===Map Template Template Test=== */-->
+<!--/* <div data-sly-use.booksTemplate="authorbooks.html"> */-->
+<!--/*     <sly data-sly-call="${booksTemplate.booksMap @ books=htl}"/> */-->
+<!--/* </div> */-->
+<!--/* ===ArrayList Template Test=== */-->
+<!--/* <div data-sly-use.booksTemplate="authorbooks.html"> */-->
+<!--/*     <sly data-sly-call="${booksTemplate.booksList @ books=htl}"/> */-->
+<!--/* </div> */-->
+<!--/* ===Slightly attribute=== */-->
+<!--/* <div id="slightly-attribute" data-sly-attribute="${htl.booksMap}"> */-->
+<!--/*     <p>Slightly attribute</p> */-->
+<!--/* </div> */-->
 
 
