--- a/ui.apps/src/main/content/jcr_root/apps/wknd/components/byline/byline.html
+++ b/ui.apps/src/main/content/jcr_root/apps/wknd/components/byline/byline.html
@@ -4,7 +4,7 @@
      data-sly-test.hasContent="${!byline.empty}"
      class="cmp-byline">
     <sly data-sly-use.clientLib="/libs/granite/sightly/templates/clientlib.html">
-        <sly data-sly-call="${clientLib.all @ categories='wknd.byline'}"></sly>
+        <sly data-sly-call="${clientLib.css @ categories='wknd.byline'}"></sly>
     </sly>
     <div class="cmp-byline__image"
          data-sly-resource="${ '.' @ resourceType = 'core/wcm/components/image/v2/image' }"></div>
