create custom navigation

--- a/ui.apps/src/main/content/jcr_root/apps/wknd/components/xfpage/customheaderlibs.html
+++ b/ui.apps/src/main/content/jcr_root/apps/wknd/components/xfpage/customheaderlibs.html
@@ -15,9 +15,9 @@
 */-->
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <sly data-sly-use.clientLib="/libs/granite/sightly/templates/clientlib.html"
-     data-sly-call="${clientlib.js @ categories='wknd.dependencies'}"/>
+     data-sly-call="${clientLib.js @ categories='wknd.dependencies'}"/>
 <sly data-sly-use.clientLib="/libs/granite/sightly/templates/clientlib.html"
-     data-sly-call="${clientlib.css @ categories='wknd.base'}"/>
+     data-sly-call="${clientLib.css @ categories='wknd.base'}"/>
 
 <!--/* Include Context Hub */-->
 <sly data-sly-resource="${'contexthub' @ resourceType='granite/contexthub/components/contexthub'}"/>
