create test component

--- a/ui.apps/src/main/content/jcr_root/apps/wknd/components/shareComponent/shareComponent.html
+++ b/ui.apps/src/main/content/jcr_root/apps/wknd/components/shareComponent/shareComponent.html
@@ -3,7 +3,7 @@
     <dl>
         <dt>${share.title}</dt>
         <div class="cmp-share__item" data-sly-list.resouses="${share.resources}">
-        <dd> <a class="cmp-share__item-link" href="${resouses.link}"><b>${resouses.name}</b></a></dd>
+        <dd> <a class="cmp-share__item-link>" href="${resouses.link}"><b>${resouses.name}</b></a></dd>
         </div>
     </dl>
 </div>
