--- a/ui.apps/src/main/content/jcr_root/apps/wknd/components/structure/home/body.html
+++ b/ui.apps/src/main/content/jcr_root/apps/wknd/components/structure/home/body.html
@@ -1,25 +1,20 @@
-<!-- Page Wrapper -->
 <div id="wrapper">
-    <sly data-sly-resource="${@path='left-nav', resourceType='aemgeeks/components/global/navigation'}"></sly>
+    <sly data-sly-resource="${@path='left-nav', resourceType='wsm/components/navigation'}"></sly>
 
     <!-- Content Wrapper -->
     <div id="content-wrapper" class="d-flex flex-column">
-      <!-- Main Content -->
-      <div id="content">
-        <sly data-sly-resource="${@path='topbar', resourceType='aemgeeks/components/global/topbar'}"></sly>
-          <div class="container-fluid">
-            <sly data-sly-resource="${@path='parsys', resourceType='wcm/foundation/components/parsys'}"></sly>
-          </div>
-      </div>
-
-      <sly data-sly-resource="${@path='footer', resourceType='aemgeeks/components/global/footer'}"></sly>
+        <h1>Test Home Page</h1>
+        <!-- Main Content -->
+        <div id="content">
+            <div class="container-fluid">
+                <sly data-sly-resource="${@path='parsys', resourceType='wcm/foundation/components/parsys'}"></sly>
+            </div>
+        </div>
     </div>
 </div>
 <!-- End of Content Wrapper -->
 
 <!-- Scroll to Top Button-->
 <a class="scroll-to-top rounded" href="#page-top">
-  <i class="fas fa-angle-up"></i>
+    <i class="fas fa-angle-up"></i>
 </a>
-
-
