improve base page component with custom tab

--- a/ui.apps/src/main/content/jcr_root/apps/wknd/components/structure/home/body.html
+++ b/ui.apps/src/main/content/jcr_root/apps/wknd/components/structure/home/body.html
@@ -7,7 +7,7 @@
         <!-- Main Content -->
         <div id="content">
             <div class="container-fluid">
-                <sly data-sly-resource="${@path='parsys', resourceType='wcm/foundation/components/parsys'}"></sly>
+                <sly data-sly-resource="${@path='responsivegrid', resourceType='wcm/foundation/components/responsivegrid'}"></sly>
             </div>
         </div>
     </div>
