--- a/ui.apps/src/main/content/jcr_root/apps/wknd/components/testComponent/testComponent.html
+++ b/ui.apps/src/main/content/jcr_root/apps/wknd/components/testComponent/testComponent.html
@@ -1,7 +1,9 @@
 <div data-sly-use.testModel="com.adobe.aem.guides.wknd.core.models.TestComponentModel"
      data-sly-use.template="core/wcm/components/commons/v1/templates.html">
-    <div data-sly-list.item="${testModel.words}">
-        <p>${item.word}</p>
-    </div>
+        <div>${testModel.words @context='html'}</div>
+<!--/*     <div data-sly-list.item="${testModel.words}"> */-->
+<!--/*         <div>${item.word @context='html'}</div> */-->
+<!--/*         <p>${item.word}</p> */-->
+<!--/*     </div> */-->
 </div>
 <sly data-sly-call="${template.placeholder @ isEmpty=!testModel.words}"></sly>
