improve share component

--- a/ui.apps/src/main/content/jcr_root/apps/wknd/components/shareComponent/shareComponent.html
+++ b/ui.apps/src/main/content/jcr_root/apps/wknd/components/shareComponent/shareComponent.html
@@ -1,12 +1,16 @@
 <div data-sly-use.share="com.adobe.aem.guides.wknd.core.models.ShareModel"
      class="cmp-share">
+<!--/*     <p>${share.title}</p> */-->
+<!--/*     <p>${properties.fileReference}</p> */-->
+<!--/*     <img src="${properties.fileReference}" alt=""> */-->
+
     <dl>
         <dt>${share.title}</dt>
-        <div class="cmp-share__item" data-sly-list.resouses="${share.resources}">
-        <dd> <a class="cmp-share__item-link>" href="${resouses.link}"><b>${resouses.name}</b></a></dd>
+        <div class="cmp-share__item" data-sly-list.resouces="${share.resources}">
+         <a class="cmp-share__item-link>" href="${resouces.link}"><img src="${resouces.imageSrc}" alt=""></a>
         </div>
     </dl>
 </div>
-<sly data-sly-use.clientLib="/libs/granite/sightly/templates/clientlib.html">
-    <sly data-sly-call="${clientLib.css @ categories='wknd.sharing'}"></sly>
-</sly>
+<!--/* <sly data-sly-use.clientLib="/libs/granite/sightly/templates/clientlib.html"> */-->
+<!--/*     <sly data-sly-call="${clientLib.css @ categories='wknd.sharing'}"></sly> */-->
+        <!--/* </sly> */-->
