create hero and cards components

--- a/ui.apps/src/main/content/jcr_root/apps/wknd/components/structure/page/page.html
+++ b/ui.apps/src/main/content/jcr_root/apps/wknd/components/structure/page/page.html
@@ -1,4 +1,11 @@
 <!DOCTYPE HTML>
+<style>
+    body {
+        height: 100%;
+        font-feature-settings: "lnum";
+        text-rendering: optimizeLegibility !important;
+    }
+</style>
 <html data-sly-use.page="com.adobe.cq.wcm.core.components.models.Page" lang="${page.language}"
       data-sly-use.head="head.html"
       data-sly-use.footer="footer.html"
