--- a/ui.apps/src/main/content/jcr_root/apps/wknd/components/structure/home/body.html
+++ b/ui.apps/src/main/content/jcr_root/apps/wknd/components/structure/home/body.html
@@ -1,15 +1,36 @@
+<!-- Page Wrapper -->
+<style>
+    .m-featured-content {
+        overflow: hidden;
+        background-color: #f5f5f5;
+    }
+    .m-featured-content__wrapper {
+        margin: 0 auto;
+        width: calc(1170px - 6rem);
+    }
+    .s-title {
+        color: #6a6a6a;
+        text-transform: uppercase;
+        text-align: center;
+    }
+</style>
 <div id="wrapper">
-    <sly data-sly-resource="${@path='left-nav', resourceType='wsm/components/navigation'}"></sly>
-
     <!-- Content Wrapper -->
     <div id="content-wrapper" class="d-flex flex-column">
-        <h1>Test Home Page</h1>
         <!-- Main Content -->
         <div id="content">
             <div class="container-fluid">
-                <sly data-sly-resource="${@path='responsivegrid', resourceType='wcm/foundation/components/responsivegrid'}"></sly>
+                <div data-sly-resource="${@path='hero', resourceType='wknd/components/hero'}"></div>
+                <div class="m-featured-content">
+                    <div class="m-featured-content__wrapper">
+                        <div class="s-title" data-sly-resource="${@path='title', resourceType='wknd/components/title'}"></div>
+                        <div data-sly-resource="${@path='cards', resourceType='wknd/components/cards'}"></div>
+                    </div>
+                </div>
+                <sly data-sly-resource="${@path='parsys', resourceType='wcm/foundation/components/parsys'}"></sly>
             </div>
         </div>
+
     </div>
 </div>
 <!-- End of Content Wrapper -->
@@ -18,3 +39,16 @@
 <a class="scroll-to-top rounded" href="#page-top">
     <i class="fas fa-angle-up"></i>
 </a>
+
+
+<!--/* <div class=""> */-->
+<!--/*     <div class="aem-GridColumn aem-GridColumn&#45;&#45;default&#45;&#45;12"> */-->
+<!--/*         <sly data-sly-resource="${@path='hero', resourceType='wcm/components/hero'}"></sly> */-->
+<!--/*     </div> */-->
+<!--/*     <div> */-->
+<!--/*         <sly data-sly-resource="${@path='book', resourceType='wcm/components/book'}"> </sly> */-->
+<!--/*     </div> */-->
+<!--/*     <sly data-sly-resource="${@path='parsys', resourceType='wcm/foundation/components/parsys'}"></sly> */-->
+<!--/* </div> */-->
+
+        <!--/* <sly data-sly-resource="${@path='parsys', resourceType='wcm/foundation/components/parsys'}"></sly> */-->
